grammar.js
    source_file: $ => choice(
      $.module,
      $.interface_module,
      seq($._module_start, optional($._top_declarations), $._layout_end),
    ),

    module: $ => seq('module', $._module_definition),

    // Parser.y: module_def
    _module_definition: $ => seq(
      field('name', $.module_name),
      choice(
        seq('where', field('body', $.declarations)),
        seq(
          '=',
          field('functor', $._import_name),
          optional(choice(
            seq('where', field('body', $.declarations)),
            field('arguments', $.module_arguments),
          )),
        ),
      ),
    ),

    declarations: $ => seq(
      $._layout_start,
      optional($._top_declarations),
      $._layout_end,
    ),

    interface_module: $ => seq(
      'interface',
      'module',
      field('name', $.module_name),
      $._interface_rhs,
    ),

    _interface_rhs: $ => choice(
      seq('where', field('body', $.signature)),
      seq(
        '=',
        field('functor', $._import_name),
        choice(
          seq('where', field('body', $.declarations)),
          field('arguments', $.module_arguments),
        ),
      ),
    ),

    // Parser.y: sig_body
    signature: $ => seq(
      $._layout_start,
      optional(sep1(
        choice($.import, $._parameter_declaration),
        $._semicolon,
      )),
      $._layout_end,
    ),

    // Parser.y: modInstParams
    module_arguments: $ => seq(
      '{',
      choice(
        $._module_argument,
        commaSep1($.named_module_argument),
      ),
      '}',
    ),

    named_module_argument: $ => seq(
      field('name', $._ident),
      '=',
      field('value', $._module_argument),
    ),

    // Parser.y: modInstParam
    _module_argument: $ => choice(
      $._import_name,
      $.interface_argument,
      $.wildcard,
    ),

    interface_argument: $ => seq('interface', $._ident),

    // Repeated layout separators only arise around documentation comments
    // (see src/scanner.c).
    _semicolon: $ => choice(repeat1($._layout_semicolon), ';'),

    _top_declarations: $ => sep1($._top_declaration, $._semicolon),

    // Parser.y: vtop_decl
    private: $ => seq(
      'private',
      $._layout_start,
      $._top_declarations,
      $._layout_end,
    ),

    // Parser.y: prim_bind
    interface_constraint: $ => seq('interface', 'constraint', $._type),

    submodule: $ => seq('submodule', $._module_definition),

    interface_submodule: $ => seq(
      'interface',
      'submodule',
      field('name', $._ident),
      choice(
        seq('where', field('body', $.signature)),
        seq(
          '=',
          field('functor', $._import_name),
          optional(choice(
            seq('where', field('body', $.declarations)),
            field('arguments', $.module_arguments),
          )),
        ),
      ),
    ),

    // Parser.y: parameter_decls
    parameter: $ => seq(
      'parameter',
      $._layout_start,
      sep1($._parameter_declaration, $._semicolon),
      $._layout_end,
    ),

    // Parser.y: par_decl
    _parameter_declaration: $ => choice(
      $.signature_declaration,
      $.type_parameter,
      $.type_synonym,
      $.constraint_synonym,
      $.parameter_constraint,
    ),

    type_parameter: $ => seq(
      'type',
      commaSep1(field('name', $._type)),
      ':',
      field('kind', $._kind),
    ),

    parameter_constraint: $ => seq('type', 'constraint', $._type),

    // Parser.y: import, iface_import
    import: $ => seq(
      'import',
      choice(
        seq(
          optional(field('interface', 'interface')),
          field('module', $._import_name),
          optional(field('arguments', $.module_arguments)),
          optional($._import_as),
          optional(field('list', $.import_list)),
          optional(seq('where', field('declarations', $.local_declarations))),
        ),
        seq(
          field('module', $._import_name_backtick),
          optional($._import_as),
          optional(field('list', $.import_list)),
        ),
      ),
    ),

    _import_as: $ => seq('as', field('alias', $.module_name)),

    import_list: $ => seq(
      optional('hiding'),
      '(',
      commaSep1($._var),
      ')',
    ),

    // Parser.y: impName
    _import_name: $ => choice(
      $.module_name,
      $.submodule_name,
    ),

    submodule_name: $ => seq('submodule', $._qname),

    // Parser.y: impNameBT
    _import_name_backtick: $ => choice(
      alias($._submodule_name_backtick, $.submodule_name),
      seq('`', $.module_name),
    ),

    module_name: $ => seq(
      optional('module'),
      choice($._ident, $.qualified_name),
    ),

    // ------------------------------------------------------------------------
    // Declarations

    // Parser.y: decl
    _declaration: $ => choice(
      $.signature_declaration,
      $.pattern_binding,
      $.function,
      $.infix_function,
      $.type_synonym,
      $.constraint_synonym,
      $.fixity,
    ),

    signature_declaration: $ => seq(
      commaSep1(field('name', $._var)),
      ':',
      field('type', $.schema),
    ),

    // A binding whose left-hand side is not a single name.
    function: $ => seq(
      field('name', $._var),
      repeat(field('parameter', $._apat)),
      repeat(seq('@', field('index', $._apat))),
      choice(
        seq('=', field('body', $._expr)),
        repeat1($.guard),
      ),
    ),

    // Parser.y: propguards_case
    type_synonym: $ => seq(
      'type',
      field('name', $._type),
      '=',
      field('value', $._type),
    ),

    local_declarations: $ => seq(
      $._layout_start,
      optional(sep1($._declaration, $._semicolon)),
      $._layout_end,
    ),

    // ------------------------------------------------------------------------
    // Names and operators

    // Parser.y: ident.  Some keywords are also allowed as identifiers.
    _ident: $ => choice(
      $.identifier,
      alias(choice('x', 'private', 'as', 'hiding'), $.identifier),
    ),

    // Parser.y: qname
    _qname: $ => choice($._ident, $.qualified_name),

    // Parser.y: var
    _var: $ => choice($._ident, $.parenthesized_operator),

    parenthesized_operator: $ => seq('(', $._op, ')'),

    // Parser.y: pat_op
    _op: $ => choice(
      $._pat_op,
      alias(choice('#', '@'), $.operator),
    ),

    // Parser.y: qop
    _expr: $ => choice($._expr_no_where, $.where_expression),

    application: $ => seq(
      field('function', $._aexpr),
      repeat1(field('argument', $._aexpr)),
    ),

    // Parser.y: longApp
    _aexpr: $ => choice($._no_sel_aexpr, $.selector_expression),

    _apat: $ => choice(
      $._qname,
      $._apat_not_var,
    ),

    schema: $ => seq(
      optional(field('parameters', $.type_parameters)),
      repeat(seq(field('constraint', $._type), '=>')),
      field('type', $._type),
    ),

    // Parser.y: schema_vars
    type_parameters: $ => seq(
      '{',
      optional(commaSep1($.type_parameter_declaration)),
      '}',
    ),

    // Parser.y: schema_param
    type_parameter_declaration: $ => seq(
      field('name', $._ident),
      optional(seq(':', field('kind', $._kind))),
    ),

    // Parser.y: kind
    _kind: $ => choice(
      alias(choice('#', '*', 'Prop'), $.kind),
      $.function_kind,
    ),

    function_kind: $ => prec.right(seq(
      field('parameter', $._kind),
      '->',
      field('result', $._kind),
    )),

    // Parser.y: type
    _type: $ => choice($.function_type, $._infix_type),

    function_type: $ => seq(
      field('parameter', $._infix_type),
      '->',
      field('result', $._type),
    ),

    // Parser.y: infix_type
    _infix_type: $ => choice($.infix_type, $._app_type),

    infix_type: $ => seq(
      field('left', $._infix_type),
      field('operator', $._op),
      field('right', $._app_type),
    ),

    // Parser.y: app_type
    _app_type: $ => choice(
      $.sequence_type,
      $.type_application,
      $._atype,
    ),

    sequence_type: $ => seq(
      repeat1(seq('[', field('length', $._type), ']')),
      field('element', $._atype),
    ),

    type_application: $ => seq(
      field('constructor', $._qname),
      repeat1(field('argument', $._atype)),
    ),

    // Parser.y: atype
    _atype: $ => choice(
      $._qname,
      $.parenthesized_operator_type,
      $.number,
      $.character,
      alias($._bit_sequence_type, $.sequence_type),
      $.parenthesized_type,
      $.tuple_type,
      $.record_type,
      $.wildcard,
    ),

    parenthesized_type: $ => seq(
      '(',
      field('type', $._type),
      optional(seq(':', field('kind', $._kind))),
      ')',
    ),

    tuple_type: $ => seq(
      '(',
      optional(seq($._type, repeat1(seq(',', $._type)))),
      ')',
    ),

    record_type: $ => seq(
      '{',
      optional(commaSep1($.field_type)),
      '}',
    ),

    field_type: $ => seq(
      field('name', $._ident),
      ':',
      field('type', $._type),
    ),

    // ------------------------------------------------------------------------
    // Tokens

    identifier: _ => token(seq(ID_FIRST, repeat(ID_NEXT))),

    qualified_name: _ => token(seq(
      repeat1(seq(ID_FIRST, repeat(ID_NEXT), '::')),
      ID_FIRST, repeat(ID_NEXT),
    )),

    operator: _ => token(repeat1(OP_CHAR)),

    number: _ => token(seq(
      /[0-9]/,
      repeat(ID_NEXT),
      optional(seq('.', repeat1(choice(ID_NEXT, /[pPeE][+-]/)))),
    )),

    wildcard: _ => '_',
  },
});
